--- a/노는법.html
+++ b/노는법.html
@@ -93,7 +93,7 @@
         속에서 즐기는 팜파티, 동화 같은 블루베리 농장에서 하룻밤,<br>제철 과일 수확 체험 등 현지에서만 즐길 수 있는 특별한 경험을 하는 건 어떨까요?
       </p>
       <div
-        class="u-carousel u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xl u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-none u-thumbnails-position-right u-gallery-1"
+        class="u-carousel u-expanded-width u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-none u-thumbnails-position-right u-gallery-1"
         id="carousel-7a6a" data-interval="5000" data-u-ride="carousel">
         <ol class="u-absolute-hcenter u-carousel-indicators u-carousel-indicators-1">
           <li data-u-target="#carousel-7a6a" data-u-slide-to="0" class="u-active u-grey-70 u-shape-circle"
@@ -307,7 +307,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
         투어, 위트 있는 설명의 한양성곽길 트레킹 등 중년의 삶을 더욱 다채롭고 윤택하게 만들 수 있는 콘텐츠를 경험해 보세요!
       </p>
       <div
-        class="u-carousel u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xl u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-none u-thumbnails-position-right u-gallery-1"
+        class="u-carousel u-expanded-width u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-none u-thumbnails-position-right u-gallery-1"
         id="carousel-2d8e" data-interval="5000" data-u-ride="carousel">
         <div class="u-carousel-inner u-gallery-inner" role="listbox">
           <div class="u-active u-carousel-item u-gallery-item u-carousel-item-1">
