--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
       </div>
     </div>
   </section>
-  <!-- <section class="u-clearfix u-section-8" id="carousel_77d3">
+  <section class="u-clearfix u-section-8" id="carousel_77d3">
     <div class="u-clearfix u-sheet u-sheet-1">
       <h2 class="u-align-center-sm u-align-center-xs u-subtitle u-text u-text-1" data-animation-name="fadeIn"
         data-animation-duration="1000" data-animation-delay="0">노는법을 만나는 방법</h2>
@@ -688,7 +688,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
   <style class="u-overlap-style">
     .u-overlap:not(.u-sticky-scroll) .u-header {
       background-color: #454545 !important
