--- a/노는법.html
+++ b/노는법.html
@@ -627,7 +627,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                 <h2 class="u-custom-font u-font-source-sans-pro u-text u-text-3">
                   <a href="https://play.google.com/store/apps/details?id=com.nnb.nnb_android"
                     class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1"
-                    target="_blank"> shorturl.at/jprxI</a>
+                    target="_blank">https://nonunbub.page.link/nnb</a>
                 </h2>
                 <a href="https://play.google.com/store/apps/details?id=com.nnb.nnb_android"
                   class="u-border-none u-btn u-button-style u-none u-btn-2" target="_blank">보러가기&nbsp;&nbsp;<span
@@ -668,7 +668,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                 <h2 class="u-custom-font u-font-source-sans-pro u-text u-text-5">
                   <a href="https://nonunbub.com"
                     class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-3"
-                    target="_blank"> https://nonunbub.com</a>
+                    target="_blank">https://nonunbub.com</a>
                 </h2>
                 <a href="https://nonunbub.com" class="u-border-none u-btn u-button-style u-none u-btn-4"
                   target="_blank">보러가기&nbsp;&nbsp;<span class="u-icon u-icon-2"><svg class="u-svg-content"
