--- a/노는법.html
+++ b/노는법.html
@@ -621,18 +621,17 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
               class="u-container-style u-layout-cell u-opacity u-opacity-40 u-shape-rectangle u-size-30 u-layout-cell-2">
               <div class="u-container-layout u-container-layout-2">
                 <img class="u-image u-image-round u-preserve-proportions u-radius-10 u-image-2" src="images/31.png"
-                  alt="" data-image-width="208" data-image-height="62"
-                  data-href="https://play.google.com/store/apps/details?id=com.nnb.nnb_android" data-target="_blank">
+                  alt="" data-image-width="208" data-image-height="62" data-href="https://nonunbub.page.link/nnb"
+                  data-target="_blank">
                 <h5 class="u-custom-font u-font-source-sans-pro u-text u-text-default u-text-2">노는법 안드로이드 앱</h5>
                 <h2 class="u-custom-font u-font-source-sans-pro u-text u-text-3">
-                  <a href="https://play.google.com/store/apps/details?id=com.nnb.nnb_android"
+                  <a href="https://nonunbub.page.link/nnb"
                     class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1"
                     target="_blank">https://nonunbub.page.link/nnb</a>
                 </h2>
-                <a href="https://play.google.com/store/apps/details?id=com.nnb.nnb_android"
-                  class="u-border-none u-btn u-button-style u-none u-btn-2" target="_blank">보러가기&nbsp;&nbsp;<span
-                    class="u-icon u-icon-1"><svg class="u-svg-content" viewBox="0 0 512 512" x="0px" y="0px"
-                      style="width: 1em; height: 1em;">
+                <a href="https://nonunbub.page.link/nnb" class="u-border-none u-btn u-button-style u-none u-btn-2"
+                  target="_blank">보러가기&nbsp;&nbsp;<span class="u-icon u-icon-1"><svg class="u-svg-content"
+                      viewBox="0 0 512 512" x="0px" y="0px" style="width: 1em; height: 1em;">
                       <g>
                         <g>
                           <path
